2012-09-30  Ramon Casero  <rcasero@gmail.com>

	* matlab/FiltersToolbox/gmthr_seg.m: (v0.3.0)

	- Make THR be the first output argument. The user may want the
	threshold value, but not need the segmentation itself. In that
	case, we don't waste time and memory computing the segmentation.

	* matlab/FiltersToolbox/gmthr_seg.m: (v0.2.0)

	- Add ouptut argument THR with estimated threshold value.

	* matlab/MatlabExportFilter.hxx: (v0.1.1)

	- Check for actual size of signed long type, which may be
	architecture dependent, instead of assuming worst case scenario of
	8 bytes.

	- Add the string "MatlabExportFilter: " to most of the error
	messages, so that they are easier to track down.

2012-09-29  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/CardiacToolbox/tissue2lvrv.m: (v0.1.0)

	- Extract LV and RV cavities from tissue and atrioventricular
	surface segmentations.

	* matlab/GerardusCommon.h: (v0.6.2)
	* matlab/GerardusCommon.hxx: (v0.5.2)
	* matlab/CMakeLists.txt: (v0.2.1)
	* matlab/CgalToolbox/CMakeLists.txt: (v0.1.3)
	* matlab/MatlabExportFilter.h: (v0.1.1)
	* matlab/FiltersToolbox/CMakeLists.txt: (v0.2.1)
	* matlab/ItkToolbox/ItkPSTransform.cpp: (v0.3.2)
	* matlab/FiltersToolbox/bwregiongrow.cpp: (v0.2.6)
	* Rename matlab/GerardusCommon.hpp as matlab/GerardusCommon.h
	* Rename matlab/GerardusCommon.cpp as matlab/GerardusCommon.hxx

	- Now instead of building a library that MEX functions will link
	to, we will directly include GerardusCommon.h. The reason is that
	functions in GerardusCommon tend to be quite basic frequently
	used, and it makes a substantial difference to speed if we don't
	need to make calls to a separate library.

	- Reimplement ctrlcCheckPoint() as a C++ macro to check for the
	CTRL+C flag, and a call to function ctrlcErrMsgTxt() inside, to
	throw the error. The reason is that if ctrlcCheckPoint() were a
	function instead of a macro, this would introduce a function call
	at every iteration of the loop, which is very expensive. But then